--- a/index.html
+++ b/index.html
@@ -2,10 +2,44 @@
 <html>
 <head>
   <title></title>
+  <link rel="stylesheet" href="./resources/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
 </head>
 <body>
 
+  <!-- HEADER -->
+    <header>
+      <nav class="container">
+        <div>
+          <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics logo">
+          <span>Tortoiseshell Optics</span>
+        </div>
+        <div class="menu">
+          <ul class="container">
+            <li>Services</li>
+            <li>Products</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </nav>
+      <div class="flex container">
+        <div class="headline">
+          <h1>DON'T JUST LOOK, SEE.</h1>
+        </div>
+      </div>
+    </header>
+
+  <!-- HERO -->
+
+
+
+  <!-- HERO -->
+
+  <!-- BENEFITS -->
+
+  <!-- PHILOSOPHY & APPOINTMENTS -->
+
+  <!-- FOOTER -->
 
 </body>
 </html>
