--- a/index.html
+++ b/index.html
@@ -8,38 +8,64 @@
 <body>
 
   <!-- HEADER -->
-    <header>
-      <nav class="container">
-        <div>
-          <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics logo">
-          <span>Tortoiseshell Optics</span>
-        </div>
-        <div class="menu">
-          <ul class="container">
-            <li>Services</li>
-            <li>Products</li>
-            <li>Contact</li>
-          </ul>
-        </div>
-      </nav>
-      <div class="flex container">
-        <div class="headline">
-          <h1>DON'T JUST LOOK, SEE.</h1>
-        </div>
+  <header>
+    <nav class="container">
+      <div>
+        <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics logo">
+        <span>Tortoiseshell Optics</span>
       </div>
-    </header>
+      <div class="menu">
+        <ul class="container">
+          <li>Services</li>
+          <li>Products</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </nav>
+    <div class="flex container">
+      <div class="headline">
+        <h1>DON'T JUST LOOK, SEE.</h1>
+      </div>
+    </div>
+  </header>
 
-  <!-- HERO -->
+  <!-- FEATURES -->
 
-
-
-  <!-- HERO -->
-
-  <!-- BENEFITS -->
+  <section class="features">
+    <div class="service">
+      <img src="./resources/images/paper-icon.png" alt="Paper Icon"/>
+      <div>Comprehensive Exams</div>
+    </div>
+    <div class="service">
+      <img src="./resources/images/ruler-icon.png" alt="Ruler Icon"/>
+      <div>Custom Fittings</div>
+    </div>
+    <div class="service">
+      <img src="./resources/images/truck-icon.png" alt="Truck Icon"/>
+      <div>Fast Delivery</div>
+    </div>
+  </section>
 
   <!-- PHILOSOPHY & APPOINTMENTS -->
 
+  <section class="supporting container">
+    <div class="item">
+      <div class="title">PHILOSOPHY</div>
+      <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.
+      </p>
+    </div>
+    <div class="item">
+      <div class="title">APPOINTMENTS</div>
+      <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+    </div>
+  </section>
+
   <!-- FOOTER -->
+
+  <footer class="container">
+    <img src="./resources/images/logo-black.png" alt="black logo"/>
+    <div>Copyright Tortoiseshell Optics</div>
+  </footer>
 
 </body>
 </html>
